[package]
name = "noop-client"
version = "1.1.1"
edition = "2021"

[[bin]]
name = "noop-client"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["error-context", "help", "std", "usage", "env", "string", "derive"] }
ureq = { version = "2.9.7", features = ["native-tls", "http-crate"] }
