[package]
name = "noop-client"
version = "1.1.2"
edition = "2021"

[features]
default = []
json = ["dep:serde_json"]
yaml = ["dep:serde_yaml"]

[[bin]]
name = "noop-client"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["error-context", "help", "std", "usage", "env", "string", "derive"] }
csv = "1.3.0"
serde = "1.0.201"
serde_derive = "1.0.201"
serde_json = { version = "1.0.117", optional = true }
serde_yaml = { version = "0.9.34", optional = true }
ureq = { version = "2.9.7", features = ["native-tls", "http-crate"] }
